# WarrenZhu050413.github.io

./: .gitignore  .jekyll-ignore  CNAME  Gemfile  Makefile  README.md  _config.yml  about.md  archive.md  categories.md  index.md  links.md  media.md  more.md  now.md  papers.md  posts.md  pyproject.toml  random-1-cutouts.html  random-2-drift.html  random-3-overlap.html  random-4-constellation.html  random-5-filmstrip.html  random.md  rule-of-life.md  search.json  search.md  sentences.md  site.webmanifest
_data/: category_names.yml  collections.yaml
_includes/: collection-controls.html  collection-nav.html  collection-script.html  footer.html  head.html  header.html  inline-filter.html  link-card-minimal.html  search-overlay.html  sentence-card.html  social.html
_layouts/: bibliography.html  default.html  home.html  link-item.html  media-item.html  page.html  post.html  random.html  rule-of-life.html  sentence.html  writing.html
_links/: 3-years-of-building-a-fashion-brand-in-28-mins.md  a-brief-rant-on-the-future-of-interaction-design.md  a-very-british-democracy-yes-prime-minister-bbc-co.md  a-website-on-the-internet.md  all-spaces-roden-crater.md  async.md  barragan-foundation.md  boogie-wonderland.md  bruder-klaus-field-chapel-by-peter-zumthor.md  building-a-big-company-non-obvious-insights.md  coming-of-age-in-second-life-an-anthropologist-exp.md  empire-of-merchants.md  finger-protocol.md  fish.md  gdpval-evaluating-ai-model-performance-on-real-wor.md  generative-ui-llms-are-effective-ui-generators.md  gerhard-richter.md  goldberg-variations.md  how-buildings-learn.md  imitation-style-eternal-return.md  kafkas-prometheus.md  la-jete.md  more-is-different-for-intelligence.md  most-recognizable-song-of-each-year-1950-2022.md  pattern-language.md  paul-schrader-creates-a-diagram-mapping-the-progre.md  pin-by-lou-lou-b.md  real-computer-revolution.md  rick-astley-never-gonna-give-you-up-official-video.md  rouen-cathedral-monet-series.md  scaling-long-running-autonomous-coding.md  situated-software.md  skin-in-the-game.md  slop-vs-craft.md  the-architectural-imagination-harvard-university-c.md  the-cathedral-and-the-bazaar.md  the-conventions-and-rhetoric-of-architectural-drawing.md  the-library-of-babel.md  tlrc.md  vhs-terminal-recording-tool.md  (+5 more)
_media/: as-we-may-think.md  attention-is-all-you-need.md  future-of-programming.md  hammock-driven-development.md  inventing-on-principle.md  learnable-programming.md  lex-altman.md  media-for-thinking.md  mother-of-all-demos.md  real-computer-revolution.md  (+6 more)
(+193 files in other folders)
